--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/agricultural_product?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 123456
+spring.datasource.url= jdbc:mysql://db-agri.cgobqnyqffyu.ap-southeast-1.rds.amazonaws.com:3306/agricultural_store?useSSL=false
+spring.datasource.username= admin
+spring.datasource.password= Phien2000
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
