--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/agricultural_product?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 123456
+spring.datasource.url= jdbc:mysql://ls-9746494b2d3b351042c20b015eb3aa17b069a6e4.cyry2skxfxn6.ap-southeast-1.rds.amazonaws.com:3306/agricultural_product?useSSL=false
+spring.datasource.username= tranngocphien
+spring.datasource.password= Phien2000
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
