--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url= jdbc:mysql://ls-9746494b2d3b351042c20b015eb3aa17b069a6e4.cyry2skxfxn6.ap-southeast-1.rds.amazonaws.com:3306/agricultural_product?useSSL=false
-spring.datasource.username= tranngocphien
-spring.datasource.password= Phien2000
+spring.datasource.url= jdbc:mysql://localhost:3306/agricultural_product?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= 123456
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-server.port=10000
+server.port=8080
